
** Rename and extend 04.03 Total amount committed by individual donor

- rename optional and repeatable element incoming-contribution to
  transaction

- change documentation to specify that this element also now covers
  04.05, 04.06, 04.07, and 04.08

- remove transaction/contribution-type and make into an optional @type
  attribute for transaction/value (e.g. "funds", "in-kind")

- add transaction/transaction-type (commitment, disbursement, etc.)

- rename element transaction/donor-org to transaction/provider-org

- rename attribute transaction/donor-org/donor-activity-id to
  transaction/provider-org/provider-activity-id and clarify purpose in
  documentation

- rename optional element transaction/recipient-org to
  transaction/receiver-org

- rename optional attribute
  transaction/recipient-org/recipient-activity-id to
  transaction/receiver-org/receiver-activity-id and clarify purpose in
  documentation

- rename optional element source-activity to provider-activity, and
  specify in docs that it should be present only when
  transaction/@flow is "incoming"

- add optional element receiver-activity, and specify in docs that it
  should be present only when transaction/@flow is "outgoing"

- add optional element aid-type, to override top-level element
  iati-activity/default-aid-type

- add optional element tied-status, to override top-level element
  iati-activity/default-tied-status


* 2010-04-17 Changes

** updated iati2idml.xsl

* 2010-04-16 Changes based on 2010-04-15 teleconference

** add 2.12 Project Website

- add element activity-website

** simplify 3.01 Reporting Organization and 3.02 Participating Organization

- remove attribute reporting-org/@role - must now also list the
  organization under participating-org if it's actually involved in
  the project

- remove attribute reporting-org/@acronym and
  participating-org/@acronym - just include it in the text if desired

- update documentation

** update 3.05 Recipient Country
